# rekordbox-smart-playlist

./: .gitignore  README.md  app.py  create_recent_playlists.py  fix_rekordbox_metadata.py  migrate_to_new_structure.py  pyproject.toml  rekordbox_backup.py  rekordbox_utils.py  smart-playlists.py
examples/: example-smart-playlist.xml
playlist-data/: afterparty.json  b2b.json  beats.json  bicycle-day.json  breaky.json  chillin.json  crispy-speakers.json  dnb.json  dub.json  earthy.json  feels.json  go-through.json  halloween-2025.json  heavy-chillin.json  heavy.json  house.json  jungle.json  ketamine.json  late-night.json  lr-friends.json  main-party.json  missy.json  morningtime-vibes.json  my-set.json  party-hits.json  pool-party.json  recent-additions.json  riddim.json  rotation.json  trippin.json  vibes.json  weird.json
playlist-data/archive/: abc-summer-session.json  dft-otr.json  main-party.json
playlist-data/templates/: show.json
rekordbox_smart_playlists/: __init__.py
rekordbox_smart_playlists.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rekordbox_smart_playlists/cli/: __init__.py  commands.py  main.py
rekordbox_smart_playlists/core/: __init__.py  backup_manager.py  config.py  database.py  metadata_fixer.py  playlist_manager.py
rekordbox_smart_playlists/utils/: __init__.py  file_utils.py  logging.py  validation.py
